--- a/plugin.xml
+++ b/plugin.xml
@@ -51,6 +51,7 @@
             <uses-permission android:name="android.permission.INTERNET"/>
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
             <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
+            <meta-data android:name="CHANNEL" android:value="GooglePlay"/>
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/*/application">
             <receiver android:name="com.appsflyer.MultipleInstallBroadcastReceiver" android:exported="true">
